@@ -296,8 +296,7 @@ void HTMLFrameElementImpl::attach()
 {
     assert(!attached());
     assert(parentNode());
-    assert(parentNode()->renderer());
-
+    
     // ignore display: none for this element!
     KHTMLView* w = getDocument()->view();
     // avoid endless recursion
@@ -310,7 +309,7 @@ void HTMLFrameElementImpl::attach()
             break;
         }
 
-    if (!selfreference)  {
+    if (!selfreference && parentNode()->renderer())  {
         m_render = new (getDocument()->renderArena()) RenderFrame(this);
         m_render->setStyle(getDocument()->styleSelector()->styleForElement(this));
         parentNode()->renderer()->addChild(m_render, nextRenderer());
